# user_todo_api

./: .env  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: massim.txt  pipeline.yaml
github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 1dcf484e8f8c_add_updated_at_field_to_user_model.py  1e0377d8c498_correção.py  2193398241e5_create_users_table.py  5edabdf9ef95_add_created_at_and_updated_at_to_todo.py  7d07eb8aefbe_remove_created_at_and_updated_at_from_.py  8cedc16338d2_recreate_todos_table.py  bf3717d1b4bc_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_models.py  test_security.py  test_todos.py  test_users.py
user_todo_api/: app.py  database.py  models.py  schemas.py  security.py
user_todo_api/routers/: auth.py  todos.py  users.py
